--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ cache:
   directories:
   - $HOME/.m2
   - ~/.ansible/roles
+  - ~/.terraform
   pip: true
   apt: true
 
@@ -14,9 +15,8 @@ before_script:
  - pip install --upgrade --user ansible
  - ansible --version
  - ansible-galaxy install -r ansible/requirements.yml
- - ansible-playbook -i localhost ansible/install_packer.yml 
-# Travis doesn't provide Ubuntu 18+ yet
-# which includes Packer in apt repository
+ # Installs Packer and Terraform used in deployment steps
+ - ansible-playbook -i localhost ansible/prepare_deploy_server.yml
 
 install:
  - cd app && ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
@@ -24,12 +24,17 @@ install:
 jobs:
  include:
 
-  - stage: test
-    name: Test App
-    before_script: skip # needs change
-    script: ./mvnw test -B
+#  - stage: test
+#    name: Test App
+#    before_script: skip # needs change
+#    script: ./mvnw test -B
 
   - stage: deploy
     name: Build Golden Image AMI
     install: skip # maybe needs change  
-    script: make bake
+    script: | 
+      make bake
+      #cat manifest.json
+      AMIID=$(cat manifest.json | jq -r .builds[0].artifact_id |  cut -d':' -f2)
+      make deploy AMIID=$AMIID
+
