--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ jobs:
       AMIID=$(cat manifest.json | jq -r .builds[0].artifact_id |  cut -d':' -f2)
       #AMIID=ami-016434dc9b78a18c6
       make deploy AMIID=$AMIID ENV=prod
-    if: branch = master
+    if: branch = master AND type = push
 
   - stage: deploy
     name: Deploy non production
@@ -42,6 +42,6 @@ jobs:
       AMIID=$(cat manifest.json | jq -r .builds[0].artifact_id |  cut -d':' -f2)
       #AMIID=ami-016434dc9b78a18c6
       make deploy AMIID=$AMIID ENV=$TRAVIS_BRANCH
-    if: branch IN (sta, dev, test)
+    if: branch IN (sta, dev, test) AND type = push
 
 
